// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default node render 1`] = `
<div
  className="mui-node-content"
  onClick={[Function]}
>
  <span>
    <div
      className="node-text-title"
    >
      
    </div>
    <div
      className="node-text-subtitle"
    >
      
    </div>
  </span>
  <button
    className="node-buttons"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-ellipsis-v fa-3x"
    />
  </button>
</div>
`;

exports[`Node with a subtitle function 1`] = `
<div
  className="mui-node-content"
  onClick={[Function]}
>
  <span>
    <div
      className="node-text-title"
    >
      
    </div>
    <div
      className="node-text-subtitle"
    >
      baz
    </div>
  </span>
  <button
    className="node-buttons"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-ellipsis-v fa-3x"
    />
  </button>
</div>
`;

exports[`Node with a subtitle string 1`] = `
<div
  className="mui-node-content"
  onClick={[Function]}
>
  <span>
    <div
      className="node-text-title"
    >
      
    </div>
    <div
      className="node-text-subtitle"
    >
      Bar
    </div>
  </span>
  <button
    className="node-buttons"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-ellipsis-v fa-3x"
    />
  </button>
</div>
`;

exports[`Node with a title 1`] = `
<div
  className="mui-node-content"
  onClick={[Function]}
>
  <span>
    <div
      className="node-text-title"
    >
      Foo
    </div>
    <div
      className="node-text-subtitle"
    >
      
    </div>
  </span>
  <button
    className="node-buttons"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-ellipsis-v fa-3x"
    />
  </button>
</div>
`;

exports[`Selected node render 1`] = `
<div
  className="mui-node-content mui-node-selected"
  onClick={[Function]}
>
  <span>
    <div
      className="node-text-title"
    >
      
    </div>
    <div
      className="node-text-subtitle"
    >
      
    </div>
  </span>
  <button
    className="node-buttons"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-ellipsis-v fa-3x"
    />
  </button>
</div>
`;
